# dashboard

./: Dockerfile.dev  build.sh  dev-docker-compose.yaml  pyproject.toml  requirement.txt  run.sh
.streamlit/: config.toml  pages.toml
data/: resume.json
src/: main.py  style.css
src/elements/: resume.py  sidebar.py
