[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dashboard"
version = "0.0.1"
description = "developing"
authors = ["Lea Yeh <lea.yeh.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.2.0"
matplotlib = "^3.5.1"
plotly = "^5.6.0"
seaborn = "^0.11.3"
streamlit-embedcode = "^0.2.2"
streamlit-bokeh-events = "^0.2.0"
st-annotated-text = "^2.1.0"
plotnine = "^0.9.0"
smart-open = "^6.0.0"
convertdate = "^2.3.2"
streamlit-vega-lite = "^0.0.2"
pydeck = "^0.7.0"

[tool.poetry.dev-dependencies]

[build]
script = "poetry build"