[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dashboard"
version = "0.0.1"
description = "developing"
authors = ["Lea Yeh <lea.yeh.ml@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.2.0"
matplotlib = "^3.5.1"
plotly = "^5.6.0"
seaborn = "^0.13.2"

[tool.poetry.dev-dependencies]

[build]
script = "poetry build"